@@ -43,6 +43,7 @@ Import-Package: com.openexchange.ajax,
  com.openexchange.tools.iterator,
  com.openexchange.tools.oxfolder,
  com.openexchange.tools.service,
+ com.openexchange.tools.servlet,
  com.openexchange.tools.servlet.http,
  com.openexchange.tools.session,
  javax.servlet,
